k8s_bkp/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubernetes-native-app
  namespace: flowkind
  labels:
    app: kubernetes-native-app
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
#    kubernetes.io/ingress.class: ingress-nginx
spec:
  rules:
    #     externalip.nio.io
    - host: 104.198.39.59.nip.io
      http:
        paths:
          - path: '/'
            pathType: Prefix
            backend:
              service:
                name: kubernetes-native-app
                port:
                  number: 80
#  tls:
#    - hosts:
#        - kubernetes-native-app.cluster.flowkind.app
#      secretName: kubernetes-native-app-ingress

#
